k8s/ingress-service.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-service
#  annotations:
#  # 你可以根據需求加上或移除 annotation，例如 rewrite-target
#spec:
#  ingressClassName: nginx
#  rules:
#    - http:
#        paths:
#          - path: /api/
#            pathType: Prefix
#            backend:
#              service:
#                name: backend-cluster-ip-service
#                port:
#                  number: 5000
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: frontend-cluster-ip-service
#                port:
#                  number: 3000


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-cluster-ip-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip-service
                port:
                  number: 3000
